--- a/templates/Assignment2_template.ipynb
+++ b/templates/Assignment2_template.ipynb
@@ -35,7 +35,7 @@
    "id": "f898a88e-4f3c-4c2c-bcf5-448b2fe95007",
    "metadata": {},
    "source": [
-    "## Introduction, Context\n",
+    "## Introduction, Context (100 words)\n",
     "\n",
     "Add your text here\n"
    ]
@@ -55,7 +55,7 @@
    "id": "239c474b-9fa4-4f60-9496-1b035eb20f6a",
    "metadata": {},
    "source": [
-    "## Short literature review on the problem\n",
+    "## Short literature review on the problem (150 words)\n",
     "\n",
     "Add your text here"
    ]
@@ -65,9 +65,20 @@
    "id": "c2f41eff-0a31-4fa3-a9c0-824cf0a38582",
    "metadata": {},
    "source": [
-    "## Data Presentation \n",
+    "## Data sources Presentation (200 words)\n",
     "\n",
     "Add your text here. You can use an API, or not."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07de2958-32b1-4686-bd96-fdfe88deba77",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## API\n",
+    "\n"
    ]
   },
   {
