--- a/templates/Assignment1_template.ipynb
+++ b/templates/Assignment1_template.ipynb
@@ -35,7 +35,7 @@
    "id": "f898a88e-4f3c-4c2c-bcf5-448b2fe95007",
    "metadata": {},
    "source": [
-    "## Introduction, Context\n",
+    "## Introduction, Context and Short literature review on the problem (250 words)\n",
     "\n",
     "Add your text here\n"
    ]
@@ -52,20 +52,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "239c474b-9fa4-4f60-9496-1b035eb20f6a",
+   "id": "c2f41eff-0a31-4fa3-a9c0-824cf0a38582",
    "metadata": {},
    "source": [
-    "## Short literature review on the problem\n",
+    "## Data Sources Presentation (200 words)\n",
     "\n",
     "Add your text here"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "c2f41eff-0a31-4fa3-a9c0-824cf0a38582",
+   "id": "0504292b-8ee0-4188-a423-2a486c38918e",
    "metadata": {},
    "source": [
-    "## API and Data Presentation \n",
+    "## API Functioning (200 words)\n",
     "\n",
     "Add your text here"
    ]
@@ -85,7 +85,9 @@
    "id": "fed05faa-1739-488b-ade1-9d621316b392",
    "metadata": {},
    "source": [
-    "## Interactive Map Functioning and Design Choices"
+    "## Interactive Map Functioning and Design Choices (200 words)\n",
+    "\n",
+    "Add your text here"
    ]
   },
   {
@@ -103,7 +105,7 @@
    "id": "5c08590f-1ade-4b8f-a751-66c6ff41320a",
    "metadata": {},
    "source": [
-    "## Conlcusion \n",
+    "## Conlcusion (100 words)\n",
     "\n",
     "Add your text here"
    ]
