--- a/index.qmd
+++ b/index.qmd
@@ -1,6 +1,6 @@
 # Welcome {.unnumbered}
 
-This is the website for "Web Mapping and Geovisualisation" (module **ENVS456**) at the University of Liverpool. This course is designed and delivered by Dr. Gabriele Filomena and Dr. Elisabetta Pietrostefani from the Geographic Data Science Lab at the University of Liverpool, United Kingdom.
+This is the website for "Web Mapping and Geovisualisation" (module **ENVS456**) at the University of Liverpool. This course is designed by Dr. Gabriele Filomena and Dr. Elisabetta Pietrostefani from the Geographic Data Science Lab at the University of Liverpool, United Kingdom.
 The module has two main aims. It seeks to provide hands-on experience and training in:
 
 - The design and generation of web-based mapping and geographical information tools. 
@@ -11,8 +11,38 @@ The website is **free to use** and is licensed under the [Attribution-NonCommerc
 -   As an [html website](https://gdsl-ul.github.io/wma).
 -   As a [GitHub repository](https://github.com/GDSL-UL/wma).
 
-## Contact {.unnumbered}
+
+## Contact 2024-25 {.unnumbered}
 
 > Gabriele Filomena - gfilo \[at\] liverpool.ac.uk Lecturer in Geographic Data Science Office 1xx, Roxby Building, University of Liverpool - 74 Bedford St S, Liverpool, L69 7ZT, United Kingdom.
 
-> Elisabetta Pietrostefani - e.pietrostefani \[at\] liverpool.ac.uk Lecturer in Geographic Data Science Office 6xx, Roxby Building, University of Liverpool - 74 Bedford St S, Liverpool, L69 7ZT, United Kingdom.
+> Matt Howard - e.pietrostefani \[at\] liverpool.ac.uk Lecturer in Geographic Data Science Office 6xx, Roxby Building, University of Liverpool - 74 Bedford St S, Liverpool, L69 7ZT, United Kingdom.
+
+## Overview 
+
+### Aims
+
+This module aims to provide hands-on experience and training in:
+- The design and generation of (good looking) web-based mapping and geographical information tools.
+- The use of software to access, analyse and visualize web-based geographical information.
+
+### Learning Outcomes
+
+By the end of the module, students should be able to:
+
+(2) Visualise and represent geo-data through static and dynamic maps.
+(2) Recognise and describe the component of web based mapping infrastructure.
+(3) Collect Web-based data.
+(1) Generate interactive maps and dashboards.
+(4) Understand basic concepts of spatial network analysis.
+(5) Manipulate geo-data through scripting in Python.
+
+### Asking for Help
+
+
+*Verbal face-to-face feedback*. Immediate face-to-face feedback will be provided during computer, discussion and clinic sessions in interaction with staff. This will take place in all live sessions during the semester.
+*Teams Forum*. Asynchronous written feedback will be provided via Teams. Students are encouraged to contribute by asking and answering questions relating to the module content. Staff will monitor the forum Monday to Friday 9am-5pm, but it will be open to students to make contributions at all times. Response time will vary depending on the complexity of the question and staff availability.
+
+### Assessment:
+
+Two pieces of coursework ([Assignment 1](https://gdsl-ul.github.io/wma/general/assignmentI.html) 50% and [Assignment 2](https://gdsl-ul.github.io/wma/general/assignmentI.html) 50%). Equivalent to 2,500 words each. See guidilines on the assignment pages, submission and marking criteria [here](https://gdsl-ul.github.io/wma/general/assessments.html).
