--- a/general/assignmentI.qmd
+++ b/general/assignmentI.qmd
@@ -24,7 +24,7 @@ In this assessment, you will have the opportunity to explore different sources a
 - All the necessary steps for making your API work and for data cleaning/exploration.
 - An interactive final map. This should be fed with data obtained through the API request.
 
-***You CANNOT employ for your *main* maps the following libraries: Holoviews, Geoviews, and Plotly***
+**You CANNOT employ for your main maps the following libraries: Holoviews, Geoviews, and Plotly**
 
 ### Text in Markdown Cells, 1,000 words, distributed across the notebook:
 
