--- a/templates/Assignment2_template.ipynb
+++ b/templates/Assignment2_template.ipynb
@@ -35,9 +35,9 @@
    "id": "f898a88e-4f3c-4c2c-bcf5-448b2fe95007",
    "metadata": {},
    "source": [
-    "## Introduction, Context (100 words)\n",
+    "## Introduction, Context and Short literature review on the problem (250 words)\n",
     "\n",
-    "Add your text here\n"
+    "Add your text here"
    ]
   },
   {
@@ -48,16 +48,6 @@
    "outputs": [],
    "source": [
     "# Introductory Static Maps (replace with code and comments)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "239c474b-9fa4-4f60-9496-1b035eb20f6a",
-   "metadata": {},
-   "source": [
-    "## Short literature review on the problem (150 words)\n",
-    "\n",
-    "Add your text here"
    ]
   },
   {
@@ -77,18 +67,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## API\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a08f7e73-dbb8-4f59-a123-044c873e6dca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Api call code (replace with code and comments)"
+    "## API Code or loading data sources (replace with code and comments)"
    ]
   },
   {
@@ -96,7 +75,19 @@
    "id": "fed05faa-1739-488b-ade1-9d621316b392",
    "metadata": {},
    "source": [
-    "## Dashboard Functioning and Design/Panel Choices"
+    "## Dashboard Rationale (200 words)\n",
+    "\n",
+    "Add your text here. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "80fc2208-8cac-4db8-9bcb-b92f4684bea5",
+   "metadata": {},
+   "source": [
+    "## Dashboard's Interactivity and design choices (200 words)\n",
+    "\n",
+    "Add your text here. "
    ]
   },
   {
@@ -119,7 +110,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save and reload - Necessary to upload on Canvas a self-contained html file\n",
+    "# Save and reload the dashboard - Necessary to upload on Canvas a self-contained html file\n",
     "## do not remove, just replace with relevant file paths\n",
     "from bokeh.resources import INLINE\n",
     "from IPython.display import HTML\n",
@@ -139,7 +130,7 @@
    "id": "5c08590f-1ade-4b8f-a751-66c6ff41320a",
    "metadata": {},
    "source": [
-    "## Conlcusion \n",
+    "## Conlcusion (100 words)\n",
     "\n",
     "Add your text here"
    ]
