--- a/templates/Assignment1_template.ipynb
+++ b/templates/Assignment1_template.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## Introduction, Context and Short literature review on the problem (250 words)\n",
     "\n",
-    "Add your text here\n"
+    "Add your text here"
    ]
   },
   {
