--- a/general/structure.qmd
+++ b/general/structure.qmd
@@ -32,7 +32,9 @@
 
 **Week 6**
 
--   Lecture & Lab: Q&A & Assignment I Clinic
+-   Lecture: Q&A & Assignment I Clinic
+
+- 	Lab: No Lab this week.
 
 -   **Assignment I Due**
 
@@ -54,5 +56,8 @@
 
 **Week 11**
 
--   Lecture & Lab: Review & Assignment II clinic
+-   Lecture: Review & Assignment II clinic
+
+- 	Lab: No Lab this week.
+
 -   **Assignment II Due (Week 12)**
