--- a/templates/Assignment1_template.ipynb
+++ b/templates/Assignment1_template.ipynb
@@ -5,7 +5,7 @@
    "id": "97452479-dc4b-44cd-aab3-7016c3cdd980",
    "metadata": {},
    "source": [
-    "# Assignemnt 1: Add your title"
+    "# Assignment 1: Add your title"
    ]
   },
   {
