--- a/templates/Assignment2_template.ipynb
+++ b/templates/Assignment2_template.ipynb
@@ -5,7 +5,7 @@
    "id": "07ad9a27-496a-4826-87b0-797d8dd00e24",
    "metadata": {},
    "source": [
-    "# Assignemnt 2: Add your title"
+    "# Assignment 2: Add your title"
    ]
   },
   {
