w4 lab typo fix

--- a/index.tex
+++ b/index.tex
@@ -5074,7 +5074,7 @@ and are briefly covered below:
 \item
   Direct the bash terminal to your data directory. This requires a more
   extended filepath than python due to crossing over the different OS
-  environments, (i.e.~if your data filepath was *C:\envs456\data*, you
+  environments, (i.e.~if your data filepath was C:\envs456\data, you
   would use the command: \texttt{\$\ cd\ ../../mnt/c/envs456/data}).
 \item
   run the tippecanoe command:
