--- a/labs/w04_dataArch.ipynb
+++ b/labs/w04_dataArch.ipynb
@@ -529,7 +529,7 @@
     "1. Install a Linux Bash Shell (i.e. Ubuntu) - This can be done from the Microsoft Store.\n",
     "2. Run the installed shell, completing set up by creating a username and password (remember these!)\n",
     "3. Install Tippecanoe, using the commands listed in the above link.\n",
-    "4. Direct the bash terminal to your data directory. This requires a more extended filepath than python due to crossing over the different OS environments, (i.e. if your data filepath was C:, you would use the command: `$ cd ../../mnt/c/envs456/data`).\n",
+    "4. Direct the bash terminal to your data directory. This requires a more extended filepath than python due to crossing over the different OS environments, (i.e. if your data filepath was C:, you would use the command: `$ cd ../../mnt/c`).\n",
     "5. run the tippecanoe command: `$ tippecanoe -zg -o liverpool.mbtiles --drop-densest-as-needed buildings_liverpool.geojson` (for an explanation of the arguments we've used here see the command overview [here](https://github.com/mapbox/tippecanoe?tab=readme-ov-file#try-this-first))\n",
     "\n",
     "This should build a .mbtile version of your 'buildings_liverpool' geojson directly into your data directory!"
